@@ -165,6 +165,7 @@
                 261
                 262
                 263
+                264
                 265
                 267
                 268
@@ -172,6 +173,17 @@
             )
 #endif
         )
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 120000
+        (if (equal? (param "CPU") "arm64")
+            (allow iokit-external-method
+                (iokit-method-number
+                    43
+                    44
+                    46
+                )
+            )
+        )
+#endif
         (deny (with telemetry)
             iokit-external-trap
         )
