@@ -1,3 +1,15 @@
+2021-06-25  Per Arne  <pvollan@apple.com>
+
+        [macOS] Add missing methods to IOKit filter
+        https://bugs.webkit.org/show_bug.cgi?id=227398
+        <rdar://79487528>
+
+        Reviewed by Brent Fulgham.
+
+        Add missing methods to the IOAccelerator IOKit filter on macOS.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2021-06-25  Ryan Haddad  <ryanhaddad@apple.com>
 
         Unreviewed, reverting r279208.
